[package]
name = "exec"
version = "0.1.0"
edition = "2018"

build = "build.rs"

[[bin]]
name = "exec"
path = "main.rs"

[build-dependencies]
capnp = "0.14.6"
capnpc = "0.14.7"

[dependencies]
capnp = "0.14.6"
capnp-rpc = "0.14.1"
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["net", "rt", "macros"] }
tokio-util = { version = "0.7.1", features = ["compat"] }
